api: list available profiles for a distro
The user can request the available oSCAP profiles for a given
distribution. The list was copied from the images repository:

* rhel8: https://github.com/osbuild/images/blob/main/pkg/distro/rhel8/distro.go#L19-L35
* rhel9: https://github.com/osbuild/images/blob/main/pkg/distro/rhel9/distro.go#L21-L37

This list would need manual update for now.

HMS-2077
